--- a/web-src/public/login.html
+++ b/web-src/public/login.html
@@ -75,4 +75,12 @@
     </div>
 </script>
 
+    
+<script id="login-okta-template" type="text/template">
+    <div>
+        <input type="submit" id="login-okta-button" class="login-button oauth-button" value="Sign in with Okta">
+        <div class="login-info-label"></div>
+    </div>
+</script>
+
 </html>
